<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, NannyMeterActivity!</string>
    <string name="app_name">NannyMeter</string>
    <string name="default_rate">10.0</string>
    <string name="default_tip">15</string>
    <string name="wereoff">We\'re Off</string>
    <string name="reset">Reset</string>
    <string name="starttime">Start Time:</string>
    <string name="change">Change</string>
    <string name="time">Time:</string>
    <string name="youowe">You Owe:</string>
    <string name="nannymeter">Nanny Meter</string>    
    <string name="rate">$/Hour:</string>    
    <string name="tip">Tip%:</string>    
    <string name="reset_meter">Reset Meter</string>    
    <string name="meter_on">Meter On</string>    
    <string name="meter_off">Meter Off</string>    
    <string name="description">Nanny Meter is an anpp which lets you keep track of how much you owe your baby sitter when you go out for the night.  You start it when you go out and it tell\'s you exactly how much you owe, like a taxi meter.</string>
</resources>